--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "html-react-parser": "^4.0.0",
     "lodash": "^4.17.21",
     "node-sass": "^7.0.3",
     "react": "^17.0.2",
